install(
  FILES gpredict-doppler_gpredict_doppler.block.yml
  gpredict-doppler_gpredict_rotor.block.yml
  gpredict-doppler_gpredict_azel_limit.block.yml
  gpredict-doppler_gpredict_PairToVar.block.yml
  gpredict-doppler_gpredict_VarToMsg.block.yml
  gpredict-doppler_gpredict_vel_doppler.block.yml
  DESTINATION share/gnuradio/grc/blocks
)
